k8s/sasa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sasa-frontend
  namespace: sasa
  labels:
    app: sasa-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sasa-frontend
  template:
    metadata:
      labels:
        app: sasa-frontend
    spec:
      containers:
        - name: sasa-frontend
          image: 192.168.0.101:5050/sasa-frontend:46b982f4aaaa7d7c8fa2251963f3bc71cc7143e8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
