k8s/sasa/public-backend-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: sasa-frontend-bridge
  namespace: saratube
spec:
  type: ExternalName
  externalName: sasa-frontend.sasa.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
