k8s/sasa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sasa-frontend
  namespace: sasa
spec:
  type: ClusterIP
  selector:
    app: sasa-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
