k8s/sasa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sasa-frontend
  namespace: sasa
spec:
  ingressClassName: nginx
  rules:
    - host: sasa-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sasa-frontend
                port:
                  name: http
